@@ -1,3 +1,8 @@
+2007-06-18  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c (TclEvalEx):	Moved the CmdFrame off the C stack
+	and onto the Tcl stack.
+
 2007-06-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclProc.c (TclObjInterpProcCore): Minor fixes to make
